--- a/.github/workflows/first-action.yml
+++ b/.github/workflows/first-action.yml
@@ -5,8 +5,8 @@ on: workflow_dispatch
 jobs:
   first-job:
     runs-on: ubuntu-latest
-    - steps:
-      -name: Print greeting
-       run: echo "Hello World!"
-      -name: Print Goodbye
-       run: echo: "Done-Bye!"
+    steps:
+      - name: Print greeting
+        run: echo "Hello World!"
+      - name: Print Goodbye
+        run: echo "Done-Bye!"
